# pelican-jupyter

./: CHANGELOG.md  CONTRIBUTING.md  GOVERNANCE.md  MANIFEST.in  Makefile  README.md  RELEASE.md  pyproject.toml  requirements-ci.txt  requirements-dev.in  requirements-dev.lock.txt  requirements-dev.txt  requirements-min.txt  requirements.txt  setup.py
.github/workflows/: test.yml
ci/: check_no_execution.py  check_scope.py  check_workflow.py  constraints-pelican412.txt  external_corpus.py  verify_artifacts.py
docs/: DIRECT_READER.md  FIRST_RELEASE_CONTRACT.md  LEGACY_FEATURE_INVENTORY.md  PROVENANCE.md  RELEASE_CANDIDATE.md  REPOSITORY_SNAPSHOT.md  ROADMAP.md
docs/decisions/: 0001-fork-first-development-identity.md
examples/visual-review/: README.md  pelicanconf.py
examples/visual-review/content/: contract-v1.ipynb  contract-v1.nbdata
pelican/plugins/ipynb_reader/: __init__.py  conversion.py  errors.py  publication.py  reader.py
pelican_jupyter/: markup.py
pelican_jupyter/tests/: test_base_usage.py  test_external_harness.py  test_import.py  test_namespace.py  test_no_execution.py  test_output_contract.py  test_publication_gate.py  test_reader_contract.py  test_reader_features.py
pelican_jupyter/tests/fixtures/: no_execution_sentinel.ipynb  no_execution_sentinel.nbdata
pelican_jupyter/tests/fixtures/nbconvert-basic.v1/: representative.fragment.html
pelican_jupyter/tests/pelican/markup-nbdata/: pelicanconf.py
pelican_jupyter/tests/pelican/markup-nbdata/content/: nbdata-file.ipynb  nbdata-file.nbdata  no-execution-sentinel.ipynb  (+1 more)
