[build-system]
requires = ["setuptools>=77", "setuptools_scm[toml]>=8,<10", "wheel"]

[tool.setuptools_scm]
write_to = "pelican_jupyter/_generated_version.py"

[tool.pytest.ini_options]
norecursedirs = ".git,dist,build,env,venv"
addopts = "pelican_jupyter/tests -s -vv --cov-config=pyproject.toml --cov=pelican.plugins.ipynb_reader --cov=pelican_jupyter.markup --cov-report term-missing"
markers = []

[tool.coverage.run]
parallel = true
branch = true

[tool.coverage.report]
omit = ["pelican_jupyter/_generated_version.py", "pelican_jupyter/vendor/*", "pelican_jupyter/tests/*"]

[tool.black]
target-version = ["py310"]
exclude = '''
(
    asv_bench/env
  | \.egg
  | \.git
  | \.hg
  | \.mypy_cache
  | \.nox
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
  | _generated_version.py
)
'''

[tool.isort]
profile = "black"
known_first_party = ["pelican_jupyter"]
line_length = 88

[tool.mypy]
python_version = "3.10"
files = ["pelican/plugins/ipynb_reader"]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
